== Unreleased

== Version 12.6.0

- Update API version with 2024-07 release ([#723](https://github.com/Shopify/shopify_python_api/pull/723))

== Version 12.5.0

- Remove `cgi` import to avoid triggering a `DeprecationWarning` on Python 3.11.
- Update API version with 2024-04 release.([710](https://github.com/Shopify/shopify_python_api/pull/710))

== Version 12.4.0

- Update API version with 2023-07, 2023-10, 2024-01 releases ([#694](https://github.com/Shopify/shopify_python_api/pull/694))

== Version 12.3.0

- Update API version with 2023-04 release ([#649](https://github.com/Shopify/shopify_python_api/pull/649))

== Version 12.2.0

- Update API version with 2023-01 release ([#631](https://github.com/Shopify/shopify_python_api/pull/631))

== Version 12.1.0

- Add API version with 2022-10 release

== Version 12.0.1

- Allow up to 10 seconds clock skew to avoid `ImmatureSignatureError`
  ([#609](https://github.com/Shopify/shopify_python_api/pull/609))

== Version 12.0.0

- Update API version with 2022-04 release, remove API version 2021-07 ([#591](https://github.com/Shopify/shopify_python_api/pull/591))

== Version 11.0.0

- Update API version with 2022-04 release
- remove API version 2020-10, 2021-01, 2021-04 as they are all unsupported as of 2022-04

== Version 10.0.0

- Update API version with 2022-01 release, remove API version 2020-07

== Version 9.0.0

- Drop Python 2 support ([#549](https://github.com/Shopify/shopify_python_api/pull/549))
- Update API version with 2021-10 release, remove API version 2020-04 ([#548](https://github.com/Shopify/shopify_python_api/pull/548))

== Version 8.4.2

- Update API version with 2021-07 release, remove API version 2020-01 ([#521](https://github.com/Shopify/shopify_python_api/pull/521))

== Version 8.4.1

- Bug fix: `sanitize_shop_domain` now returns `None` rather than `'none.myshopify.com'` if no `shop_domain` arg is passed in ([#499](https://github.com/Shopify/shopify_python_api/pull/499))

== Version 8.4.0
