@@ -1,4 +1,5 @@
 == Unreleased
+- Remove requirement to use a predefined API version. Now you can use any valid API version string. ([#737](https://github.com/Shopify/shopify_python_api/pull/737))
 
 == Version 12.6.0
 
